== Changelog

[discrete]
=== 27 September 2022 (**r74** on Itch.io)
* *[NEW]* Add support for dragging files from the system to the file dialog, Textures, Scripts, and Render windows

[discrete]
=== 23 September 2022
* *[NEW]* Add a list of pinned directories to the file dialog (part of the configuration)
* *[FIX]* Close the file dialog modal popup before showing the quit confirmation one
* *[FIX]* Show the quit confirmation modal window on Android

[discrete]
=== 22 September 2022
* *[FIX]* Fix a crash when playing animations in a sequential group with disabled looping
* *[FIX]* Fix compilation with the latest version of the nCine

[discrete]
=== 26 October 2021
* *[NEW]* Move the texture rectangle of a sprite with the mouse while pressing the Alt key
* *[NEW]* Resize the texture rectangle of a sprite with the mouse while pressing the Shift key
* *[FIX]* Retain the texture rectangle of a sprite when changing texture

[discrete]
=== 17 October 2021 (**r66** on Itch.io)
* *[NEW]* Add an option to specify the frames layout inside a spritesheet
* *[FIX]* Clear the spritesheet texture before rendering frames
* *[FIX]* Stabilize tips window size by extending tips strings with new lines

[discrete]
=== 12 October 2021
* *[NEW]* Add groups to organize sprites
* *[NEW]* Add colors to sprites and groups to easily locate corresponding animations
* *[NEW]* Assign a name to a newly created sprite, group, or animation
* *[FIX]* Reverse list of sprites in combo boxes to match the rendering layer order
* *[FIX]* Clone corresponding animations when cloning a sprite
* *[FIX]* Unassign a sprite's parent if the latter is deleted

[discrete]
=== 07 October 2021
* *[NEW]* Move sprites and animations with the up or down arrow key
* *[NEW]* Navigate tips with the left or right arrow key
* *[FIX]* Disable (without hiding) all the buttons from the textures, sprites, scripts and animations windows
* *[FIX]* Disable (without hiding) the context menu items that cannot be selected